--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -1,9 +1,8 @@
 <div class="login-wrapper">
   <form class="login">
     <label class="title">
-      <img src="assets/images/012-card.png" alt="login-logo" id="login-logo">
-      <h3 class="welcome">Welcome to</h3>
-      Ground Out
+      <img src="assets/images/012-card.png" alt="login-logo" id="auth-logo">
+      Login
     </label>
     <div class="login-group">
       <input class="username" type="text" id="login_username" placeholder="Username">
@@ -12,7 +11,7 @@
         Invalid user name or password
       </div> -->
       <button type="submit" class="btn btn-primary">NEXT</button>
-      <a href="javascript://" class="signup">Sign up for a new account</a>
+      <a routerLink="/register" class="signup">Sign up for a new account</a>
     </div>
   </form>
 </div>
