--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -7,7 +7,7 @@
   </div>
   <div class="header-nav">
     <a class="active nav-link nav-text">Dashboard</a>
-    <a class="nav-link nav-text">Interactive Analytics</a>
+    <a routerLink="/tickets" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" class="nav-link nav-text">Find Tickets</a>
   </div>
   <div class="header-actions">
 
