--- a/client/src/app/components/map/map.component.html
+++ b/client/src/app/components/map/map.component.html
@@ -1,1 +1,8 @@
-<div id="map"></div>
+<div class="card">
+    <div class="card-header">
+        Map
+    </div>
+    <div class="card-block">
+        <div id="map"></div>
+    </div>
+</div>
