--- a/client/src/app/components/ticket-finder/ticket-finder.component.html
+++ b/client/src/app/components/ticket-finder/ticket-finder.component.html
@@ -1,12 +1,18 @@
-<h2>Ticket Finder</h2>
+<div class="row">
+    <div class="col-lg-5 col-md-8 col-sm-12 col-xs-12">
 
-<form [formGroup]="form" (submit)="getEventsInRange()">
-    <section class="form-block">
-        <label>Find Games Near Me</label>
-        <div class="form-group">
-            <label for="radius">Radius (mi)</label>
-            <div class="select">
-                <select formControlName="radius" name="radius" id="radius">
+        <!-- Form -->
+        <div class="card">
+            <div class="card-header">
+                Find Games Near Me
+            </div>
+            <div class="card-block">
+                <form [formGroup]="form" (submit)="getEventsInRange()">
+                    <section class="form-block">
+                        <div class="form-group">
+                            <label for="radius">Radius (mi)</label>
+                            <div class="select">
+                                <select formControlName="radius" name="radius" id="radius">
                     <option [value]="50">50</option>
                     <option [value]="100">100</option>
                     <option [value]="200">200</option>
@@ -14,22 +20,40 @@
                     <option [value]="400">400</option>
                     <option [value]="0">500+</option>
                 </select>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="begin">Begin Date</label>
+                            <input formControlName="beginDate" type="date" name="begin" value="">
+                        </div>
+                        <div class="form-group">
+                            <label for="end">End Date</label>
+                            <input formControlName="endDate" type="date" name="end" value="">
+                        </div>
+                        <div class="form-group">
+                            <label for="price1">Min Ticket Price</label>
+                            <input formControlName="minPrice" type="number" name="price1" placeholder="Min Price">
+                        </div>
+                        <div class="form-group">
+                            <label for="price2">Max Ticket Price</label>
+                            <input formControlName="maxPrice" type="number" name="price2" placeholder="Max Price">
+                        </div>
+                    </section>
+                    <button [disabled]="!form.valid" type="submit" class="btn btn-primary">Get Events</button>
+                </form>
             </div>
         </div>
-        <div class="form-group">
-            <label for="begin">Begin Date</label>
-            <input formControlName="beginDate" type="date" name="begin" value="">
-        </div>
-        <div class="form-group">
-            <label for="end">End Date</label>
-            <input formControlName="endDate" type="date" name="end" value="">
-        </div>
-        <div class="form-group">
-            <label for="price">Max Ticket Price</label>
-            <input formControlName="maxPrice" type="number" name="price" placeholder="Max Price">
-        </div>
-    </section>
-    <button [disabled]="!userLocation" type="submit" class="btn btn-outline">Get Events</button>
-</form>
 
-<app-map [userLocation]="userLocation" [events]="events"></app-map>
+        <!-- Ticket List -->
+        <app-ticket-list [events]="events" [meta]="meta" [queryParams]="queryParams" (onEventTicketSelect)="onEventTicketSelect($event)"
+            (onQueryChange)="onQueryChange()"></app-ticket-list>
+    </div>
+    <div class="col-lg-7 col-md-8 col-sm-12 col-xs-12">
+
+        <!-- Map -->
+        <app-map [userLocation]="userLocation" [events]="events"></app-map>
+
+        <!-- Parks -->
+        <app-parks [parks]="homeTeams" (onParkSelect)="onParkSelect($event)"></app-parks>
+    </div>
+</div>
