--- a/client/src/app/components/map/map.component.html
+++ b/client/src/app/components/map/map.component.html
@@ -1,6 +1,6 @@
 <div class="card">
     <div class="card-header">
-        Map
+        <span>Map</span>
     </div>
     <div class="card-block">
         <div id="map"></div>
