--- a/client/src/app/components/user-trips/user-trips.component.html
+++ b/client/src/app/components/user-trips/user-trips.component.html
@@ -1,8 +1,20 @@
 <div class="row">
   <div class="col-lg-7">
-    <app-trip-list [trips]="trips"></app-trip-list>
+    <app-trip-list [trips]="trips" (onDeleteTrip)="confirmDeleteTrip($event)"></app-trip-list>
   </div>
   <div class="col-lg-5">
     <app-trips-map [trips]="trips"></app-trips-map>
   </div>
 </div>
+
+<!-- Delete Confirmation Modal -->
+<clr-modal [(clrModalOpen)]="!!tripStagedForDelete" [clrModalClosable]="true">
+  <h3 class="modal-title">Confirm Delete</h3>
+  <div class="modal-body">
+    <p>{{deleteConfirmationModalContent}}</p>
+  </div>
+  <div class="modal-footer">
+    <button (click)="tripStagedForDelete = null" class="btn btn-default">Cancel</button>
+    <button (click)="deleteTrip()" class="btn btn-primary">Ok</button>
+  </div>
+</clr-modal>
