--- a/client/src/app/components/user-trips/user-trips.component.html
+++ b/client/src/app/components/user-trips/user-trips.component.html
@@ -4,6 +4,7 @@
   </div>
   <div class="col-lg-5">
     <app-trips-map [trips]="trips"></app-trips-map>
+    <app-progress [trips]="trips" [parks]="parks"></app-progress>
   </div>
 </div>
 
