--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,1 +1,63 @@
-<h2>Home Route</h2>
+<div class="banner-container row">
+    <div class="banner col-lg-5">
+        <img class="stopwatch" src="/assets/images/014-stopwatch.png" alt="">
+    </div>
+    <div class="banner col-lg-7">
+        <h3 class="banner-subheader">Welcome to</h3>
+        <h1 class="banner-header">GROUND OUT</h1>
+    </div>
+</div>
+<div class="row flex-items-xs-center auth-button-group">
+    <a routerLink="/login" class="btn btn-outline">Log in</a>
+    <a routerLink="/register" class="btn btn-primary">Get Started</a>
+</div>
+<div class="content-container row">
+    <div class="col-lg-4 col-md-6 col-sm-12">
+        <div class="card">
+            <div class="card-header">
+                <div class="content-img-circle dark-blue">
+                    <img class="content-img" src="/assets/images/017-field.png" alt="find tickets">
+                </div>
+                <h3 class="content-heading">EXPLORE PARKS</h3>
+            </div>
+            <div class="card-block">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab repudiandae dolore repellat, ad voluptates obcaecati libero
+                ipsam corrupti praesentium nesciunt, quam nisi vitae unde autem numquam. Ipsa perferendis repellat illum?
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab repudiandae dolore repellat, ad voluptates obcaecati
+                libero
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-4 col-md-6 col-sm-12">
+        <div class="card">
+            <div class="card-header">
+                <div class="content-img-circle red">
+                    <img class="content-img" src="/assets/images/007-tactics.png" alt="find tickets">
+                </div>
+                <h3 class="content-heading">TRACK PROGRESS</h3>
+            </div>
+            <div class="card-block">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab repudiandae dolore repellat, ad voluptates obcaecati libero
+                ipsam corrupti praesentium nesciunt, quam nisi vitae unde autem numquam. Ipsa perferendis repellat illum?
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab repudiandae dolore repellat, ad voluptates obcaecati
+                libero ipsam corrupti praesentium nesciunt, quam nisi vitae unde autem numquam. Ipsa perferendis repellat
+                illum?
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-4 col-md-6 col-sm-12">
+        <div class="card">
+            <div class="card-header">
+                <div class="content-img-circle gold">
+                    <img class="content-img" src="/assets/images/021-ticket.png" alt="find tickets">
+                </div>
+                <h3 class="content-heading">FIND TICKETS</h3>
+            </div>
+            <div class="card-block">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab repudiandae dolore repellat, ad voluptates obcaecati libero
+                ipsam corrupti praesentium nesciunt, quam nisi vitae unde autem numquam. Ipsa perferendis repellat illum?
+                ipsam corrupti praesentium nesciunt, quam nisi vitae unde autem numquam. Ipsa perferendis repellat illum?
+            </div>
+        </div>
+    </div>
+</div>
