--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <header class="header-6">
   <div class="branding">
-    <a class="logo-and-title">
+    <a class="logo-and-title" routerLink="/">
       <img src="assets/images/009-location.png" alt="logo" id="logo">
       <span class="title">Ground Out</span>
     </a>
