create default message for new users. change toasts to fixed pos

--- a/client/src/app/components/app-flash/app-flash.component.css
+++ b/client/src/app/components/app-flash/app-flash.component.css
@@ -1,5 +1,9 @@
 .alert {
     padding: 9px 12px 3px 12px;
+    position: fixed;
+    z-index: 10;
+    top: 0;
+    right: 40px;
 }
 
 .alert-item {
