--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -16,7 +16,7 @@
 <!-- Trip nav buttons -->
 <div *ngIf="isLoggedIn" class="row flex-items-xs-center nav-button-group">
     <a routerLink="/trips" class="btn btn-primary">View My Trips</a>
-    <a routerLink="/trips/new" class="btn btn-outline">Log New Trip</a>
+    <a routerLink="/trip/new" class="btn btn-outline">Log New Trip</a>
 </div>
 
 <div class="content-container row">
