--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -20,8 +20,8 @@
                 <clr-icon shape="caret down"></clr-icon>
             </button>
       <clr-dropdown-menu>
-        <a href="..." clrDropdownItem>Preferences</a>
-        <a href="" (click)="logout()" clrDropdownItem>Log out</a>
+        <a clrDropdownItem>Preferences</a>
+        <a (click)="logout()" clrDropdownItem>Log out</a>
       </clr-dropdown-menu>
     </clr-dropdown>
 
