get tickets for single park

--- a/client/src/app/components/park-details/park-details.component.html
+++ b/client/src/app/components/park-details/park-details.component.html
@@ -1,3 +1,4 @@
 <p>
   park-details for {{teamName}} works!
 </p>
+<app-ticket-list *ngIf="events" [events]="events" [meta]="meta" [queryParams]="queryParams"></app-ticket-list>
