--- a/client/src/app/components/stars/stars.component.html
+++ b/client/src/app/components/stars/stars.component.html
@@ -1,2 +1,2 @@
-<clr-icon shape="star" *ngFor="let rank of [1,2,3,4,5]; let i = index" [ngClass]="{'is-solid': rating >= i}" class="is-warning">
+<clr-icon shape="star" *ngFor="let rank of [1,2,3,4,5]; let i = index" [ngClass]="{'is-solid': rating >= i + 1}" class="is-warning">
 </clr-icon>
