get single trip, reroute on trip submit

--- a/client/src/app/components/trip-logger/trip-logger.component.html
+++ b/client/src/app/components/trip-logger/trip-logger.component.html
@@ -37,7 +37,7 @@
             <div *ngFor="let preview of photoPreviews; let i = index" class="preview-img-wrapper">
               <div class="card">
                 <div class="card-block">
-                  <img [src]="preview.result" class="preview-img" />
+                  <img [src]="preview" class="preview-img" />
                 </div>
                 <div class="card-footer flex-items-xs-right">
                   <clr-tooltip>
