--- a/client/src/app/components/trip-list/trip-list.component.html
+++ b/client/src/app/components/trip-list/trip-list.component.html
@@ -4,10 +4,12 @@
     <span>{{trip.park.name}}</span>
     <span class="header-date">{{trip.tripDate | date}}</span>
     <div class="card-actions">
-      <a role="tooltip" aria-haspopup="true" class="tooltip tooltip-xs tooltip-left">
+      <!-- Edit -->
+      <a [routerLink]="['/trip/edit', trip._id]" role="tooltip" aria-haspopup="true" class="tooltip tooltip-xs tooltip-left">
         <clr-icon shape="note-edit" size="18" class="is-info"></clr-icon>
         <span class="tooltip-content">Edit</span>
       </a>
+      <!-- Delete -->
       <a role="tooltip" aria-haspopup="true" class="tooltip tooltip-xs tooltip-right">
         <clr-icon (click)="deleteTrip(trip)" shape="trash" size="18" class="is-danger"></clr-icon>
         <span class="tooltip-content">Delete</span>
