--- a/client/src/app/components/trip-logger/trip-logger.component.html
+++ b/client/src/app/components/trip-logger/trip-logger.component.html
@@ -1,7 +1,7 @@
 <div class="col-lg-10 col-md-12 offset-lg-1">
   <div class="card">
     <div class="card-header">Log Trip</div>
-    <form (submit)="submitTrip()">
+    <form (submit)="submitTrip()" *ngIf="trip">
       <div class="card-block">
         <section class="form-block">
           <!-- Date -->
@@ -59,6 +59,7 @@
       </div>
       <!-- Submit -->
       <div class="card-footer">
+        <button (click)="cancel()" class="btn btn-default">Cancel</button>
         <button type="submit" class="btn btn-primary">Submit</button>
       </div>
     </form>
